[project]
name = "l01"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "steven_hp_1", email = "s@s.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pygame>=2.6.1",
]

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"
